Adds migrations and models.
