# app/api/resources/v1/bear_sightings/create.js
@@ -1,0 +1,19 @@
+const {
+	BearSighting
+} = require('../../../../db/models/index');
+
+module.exports = (req, res) => {
+	console.log('hi')
+	const payload = req.body;
+
+	BearSighting.create(payload)
+		.then(bearSighting => {
+			return res.status(200).send(bearSighting)
+		})
+		.catch(err => {
+			let errors = [];
+			errors.push({err, message: `Error creating bear sighting.`});
+
+			return res.status(404).send({errors});
+		})
+};
