# app/api/resources/v1/index.js
@@ -1,5 +1,7 @@
 const health = require('./health');
+const bearSightings = require('./bear_sightings');
 
 module.exports = {
-	...health
+	...health,
+	...bearSightings
 };
